--- a/brendan-mockups/style.css
+++ b/brendan-mockups/style.css
@@ -11,6 +11,15 @@
     padding: 3% 3% 3% 3%;
     background-color: #661686;
   }
+
+  footer {
+    position: fixed;
+    left: 0px;
+    bottom:0px;
+    width: 100%;
+    padding: 1% 1% 1% 1%;
+    background-color: #661686;
+  }
   
   ul {
     display: inline;
