--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0 auto;
-    font-size: 110%;
+    font-size: 100%;
   
     background-color: black;
     color:white;
@@ -9,6 +9,15 @@
   header {
     margin-top: 1%;
     padding: 3% 3% 3% 3%;
+    background-color: #661686;
+  }
+
+  footer {
+    position: fixed;
+    left: 0px;
+    bottom:0px;
+    width: 100%;
+    padding: 1% 1% 1% 1%;
     background-color: #661686;
   }
   
@@ -24,51 +33,15 @@
     margin: .5em;
   }
   
-  img {
-    display: inline;
+  .post {
+      border: 5px solid red;
   }
-  
-  .template {
-    display: none;
-  }
-  
-  .work {
-    padding-left: 4%;
-    padding-right: 4%;
-    padding-top: 10%;
-  }
-  
-  .side {
-    background-color: white;
-  }
-  
-  .line {
-    background-color: black;
-  }
-  
-  .projects {
-    margin: 1%;
-    padding: 1%;
-  }
-  
-  #name {
-    font-size: 2em;
-    background-color: #661686;
-  }
-  
-  #splash {
-    margin: 0 auto;
-    display: block;
-  }
-  
-  #primary {
-    margin: 0 auto;
+
+  .textbox {
+    width: 100%;
+    height: 200px;
   }
   
   #mainNav {
-    float: right;
-  }
-  
-  #deGuerre {
-    margin: 0 auto;
+    float: left;
   }
