--- a/pyramid_learning_journal/pyramid_learning_journal/templates/detail.jinja2
+++ b/pyramid_learning_journal/pyramid_learning_journal/templates/detail.jinja2
@@ -1,41 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="skeleton.css">
-  <link rel="stylesheet" href="style.css">
+{% extends 'index.jinja2' %}
 
-  <title>Blog Entry Detail</title>
-</head>
-<body>
-  <header>
-    <ul id="mainNav">
-      <li></li>
-      <li><a href="index.html">Entries</a></li>
-      <li>LinkedIn</li>
-      <li>About Me</li>
-    </ul>
-  </header>
-<main>
-    <div class="container">
-        <div class="one columns"></div>
-          <div class="ten columns">
-            <article class="">
-              <h1><a href="{{ request.url }}">{{ title }}</a></h1>
-              <hr>
-              <p>Created: {{ creation_date }}</p>
-              <hr>
-              <p>{{ body }}</p>
-            </article>
-          </div>
-        <div class="two columns"></div>
-        </div>
-    <footer>
-        <ul>
-            <li>This is the footer. It will contain things.</li>
-        </ul>
-    </footer>
-    </body>
-    </html>
+{% block content %}
+  <main>
+    <article>
+      <h1>{{ entry.title }}</h1>
+      <hr />
+      <p>Created {{ entry.creation_date }} </p>
+      <p>{{ entry.body }}</p>
+    </article>
+  </main>
+{% endblock %}
