--- a/pyramid_learning_journal/pyramid_learning_journal/templates/newEntry.jinja2
+++ b/pyramid_learning_journal/pyramid_learning_journal/templates/newEntry.jinja2
@@ -1,23 +1,23 @@
+{% extends 'index.jinja2' %}
 
-{% block title %}New Entry{% endblock %}
+{% block content %}
+<main>
+  <h2>Add a new entry:</h2>
 
-{% block body %}
-<h2>Add a new entry:</h2>
-
-<form class="new_entry" method="POST">
-  <p>
-    <label for="title">Title: </label>
-    <input type="text" name="title">
-  </p>
-  <p>
-    <label for="body">Entry</label>
-    <input type="text" name="body">
-  </p>
-  <p>
-    <input type="submit" name="Add Entry">
-  </p>
-</form>
-
+  <form class="new_entry" method="POST">
+    <p>
+      <label for="title">Title: </label>
+      <input type="text" name="title">
+    </p>
+    <p>
+      <label for="body">Entry</label>
+      <input type="text" name="body">
+    </p>
+    <p>
+      <input type="submit" name="Add Entry">
+    </p>
+  </form>
+</main>
 {% endblock %}
 
 <!-- <!DOCTYPE html>
