--- a/pyramid_learning_journal/pyramid_learning_journal/templates/index.jinja2
+++ b/pyramid_learning_journal/pyramid_learning_journal/templates/index.jinja2
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="skeleton.css">
   <link rel="stylesheet" href="style.css"> -->
   <link href="{{request.static_url('pyramid_learning_journal:static/normalize.css')}}" rel="stylesheet">
-  <link href="{{request.static_url('pyramid_learning_journal:static/skeleton.css')}}" rel="stylesheet">
+  <!-- <link href="{{request.static_url('pyramid_learning_journal:static/skeleton.css')}}" rel="stylesheet"> -->
   <link href="{{request.static_url('pyramid_learning_journal:static/style.css')}}" rel="stylesheet">
   <title>Brendan's Blog</title>
 </head>
