--- a/pyramid_learning_journal/pyramid_learning_journal/templates/index.jinja2
+++ b/pyramid_learning_journal/pyramid_learning_journal/templates/index.jinja2
@@ -22,7 +22,7 @@
     </ul>
   </header>
 
-  <div class="">
+  <div class="entries">
     {% block content %}{% endblock %}
     {% if entries %}
       {% for entry in entries %}
